4_3_tests_refactoring